VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc7Up.err
[8MB/2.258GB][  0%][>                                                 ][4MB/s]  [32MB/2.258GB][  1%][>                                                 ][10.67MB/s]  [96MB/2.258GB][  4%][==>                                               ][24MB/s]  [160MB/2.258GB][  6%][===>                                              ][32MB/s]  [224MB/2.258GB][  9%][====>                                             ][37.33MB/s]  [288MB/2.258GB][ 12%][======>                                           ][41.14MB/s]  [344MB/2.258GB][ 14%][=======>                                          ][43MB/s]  [408MB/2.258GB][ 17%][========>                                         ][45.33MB/s]  [472MB/2.258GB][ 20%][==========>                                       ][47.2MB/s]  [536MB/2.258GB][ 23%][===========>                                      ][48.73MB/s]  [600MB/2.258GB][ 25%][============>                                     ][50MB/s]  [656MB/2.258GB][ 28%][==============>                                   ][50.46MB/s]  [720MB/2.258GB][ 31%][===============>                                  ][51.43MB/s]  [784MB/2.258GB][ 33%][================>                                 ][52.27MB/s]  [840MB/2.258GB][ 36%][==================>                               ][52.5MB/s]  [904MB/2.258GB][ 39%][===================>                              ][53.18MB/s]  [968MB/2.258GB][ 41%][====================>                             ][53.78MB/s]  [1.008GB/2.258GB][ 44%][======================>                           ][54.32MB/s]  [1.062GB/2.258GB][ 47%][=======================>                          ][54.4MB/s]  [1.125GB/2.258GB][ 49%][========================>                         ][54.86MB/s]  [1.188GB/2.258GB][ 52%][==========================>                       ][55.27MB/s]  [1.242GB/2.258GB][ 55%][===========================>                      ][55.3MB/s]  [1.305GB/2.258GB][ 57%][============================>                     ][55.67MB/s]  [1.367GB/2.258GB][ 60%][==============================>                   ][56MB/s]  [1.43GB/2.258GB][ 63%][===============================>                  ][56.31MB/s]  [1.484GB/2.258GB][ 65%][================================>                 ][56.3MB/s]  [1.547GB/2.258GB][ 68%][==================================>               ][56.57MB/s]  [1.609GB/2.258GB][ 71%][===================================>              ][56.83MB/s]  [1.664GB/2.258GB][ 73%][====================================>             ][56.8MB/s]  [1.727GB/2.258GB][ 76%][======================================>           ][57.03MB/s]  [1.773GB/2.258GB][ 78%][=======================================>          ][56.75MB/s]  [1.836GB/2.258GB][ 81%][========================================>         ][56.97MB/s]  [1.891GB/2.258GB][ 83%][=========================================>        ][56.94MB/s]  [1.953GB/2.258GB][ 86%][===========================================>      ][57.14MB/s]  [2.016GB/2.258GB][ 89%][============================================>     ][57.33MB/s]  [2.055GB/2.258GB][ 90%][=============================================>    ][56.86MB/s]  [2.117GB/2.258GB][ 93%][==============================================>   ][57.05MB/s]  [2.172GB/2.258GB][ 96%][================================================> ][57.03MB/s]  [2.234GB/2.258GB][ 98%][=================================================>][57.2MB/s]  [2.258GB/2.258GB][100%][==================================================][57.81MB/s]  [2.258GB/2.258GB][100%][==================================================][57.81MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_39632/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_39632/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
